css/style.css
@font-face {
    font-family: 'PostGrotesk-Book';
    src: url('../fonts/post-grotesk/PostGrotesk-Book.otf');
}


@font-face {
    font-family: 'SharpSans-Semibold';
    src: url('../fonts/sharp-sans/SharpSansNo1-Semibold.otf');
}


@font-face {
    font-family: 'SharpSans-bold';
    src: url('../fonts/sharp-sans/SharpSansNo1-bold.otf');
}


@font-face {
    font-family: 'SharpSans-light';
    src: url('../fonts/sharp-sans/SharpSansNo1-Light.otf');
}




body {

	font-family: 'PostGrotesk-Book', 'montserrat';            /*'Montserrat', sans-serif; */
	font-size: 18px;
	line-height: 200%;
	letter-spacing: 0.05em;
	color: #000E30;
	background-color: #fff; 
/*	margin-right: 15px;
	margin-left: 15px;*/
	text-align: justify;

}


.clear {
 clear: both; 

}

/*//////////////////// NAV-BAR ////////////////////*/


#navbar {
	background-color: rgba(255,255,255,0.8); 	
	/*background-color: red;*/
	height: 100px;
	position: fixed;
	top: 0px;
	right: 0px;
	left: 0px;
	z-index: 1;
	max-width: 1400px;
	margin: 0 auto;
	border-color: rgba(255,255,255,0.5);


}

#nav-content {
	padding-top: 32px;
	position: relative;
	height: 100px;

}

#nav-logo-link {
	/*background-color: red;*/

}

#nav-logo-img {
	/*background-color: orange;*/
	height: 35px;

}


#nav-contact {
	/*background-color: black;*/
	margin-top: -2px;
	background-color: #000E30;
	color: white;
	float: right;
	line-height: 18px;
	border-style: solid;
	border-radius: 2px;
	border-width: 1px;
	padding-top: 11px;
	padding-bottom: 8px;
	padding-left: 15px;
	padding-right: 15px;
	/*margin-top: 20px;*/
	border-color: #000E30;
	text-decoration: none;
    font-family: 'SharpSans-light';
    font-size: 12px;
}

#nav-content a:hover {
	color: #000E30;
	border-color: #000E30;
	background-color: white;

}






/*//////////////////// COVER-PAGE ////////////////////*/

#cover-page {
	margin: 0 auto;
		margin-top:100px;

	text-align: center;
	height: 80vh;
	overflow: hidden;
	background-color: #fff;


}




#strapline {
	padding-top: 40vh;
	font-size: 180%;
	font-family: 'SharpSans-semibold',  'montserrat';
	/*font-weight: semibold;*/
	letter-spacing: 0.08em;

}



/*//////////////////// SECTION-1 ////////////////////*/


#section-1 {
		background-color: #fff;
		overflow: hidden;

}



.body-section {
	margin: 0 auto;



}

.subsection-padding {
	min-width: 100%;
	height: 100px;
	/*background-color: green;*/
	display: inline-block;

}


.body-titles {
	font-family: 'SharpSans-bold',  'montserrat'; 
	letter-spacing: 0.08em;
	font-weight: bold;
	font-size: 150%;
	text-align: left;
	color: #000E30;

}

.body-text {
	color: #61728E;
	text-align: left;
	margin-top: 20px;


}

.section-start-asset {
	height: 15px;
	width: 60px;
	display: block;
/*	margin: 0 auto;
*/	background-color: #FEE834;
	/*margin-top: 150px;*/
	margin-bottom: 40px;
}




/*//////////////////// CONTACT ////////////////////*/



.contact-button { 
	color: #27273B;
	/*color: white; */
	background-color: #F7D144; 
	/*background-color: #27273B;*/
	border: none ; 
	font-size: 20px;
	border-radius: 4px;
	box-shadow: 0px 1px 10px #666666;
	padding: 25px 50px;
	margin-top: 50px;

} 

.contact-button-container  {
	margin-top: 100px;
	margin-bottom: 100px;
	text-align: center;

}



.contact-button:hover, 
.contact-button:focus, 
.contact-button:active { 
  color: #FFFFFF; 
  background-color: #27273B; 
  border: none ; 
  text-decoration: none;
} 





/*//////////////////// SECTION-CLIENTS ////////////////////*/


#section-clients {
	width: 100%;
	background-color: white;
	/*color: #000E30;*/


}


.client-line-logo {
	display: inline-block;
	vertical-align: middle;
	/*background-color: green;*/
	line-height: 100px;
	padding-left: 0;

}


.client-line-logo img {
	max-height: 70px;
	max-width: 70px;
/*	margin-right: 15px;*/


}


.client-line-description {
	/*vertical-align: middle;*/
	/*text-align: left;*/
	/*margin-top: 20px;*/
	margin: 25px;
	line-height: 1.8em;
	text-align: left;
	color: #B6C1D1;

}

.client-line-link {
	/*vertical-align: middle;*/
	/*display: inline-block;*/
	text-align: right !important;
	/*background-color: orange;*/
	/*line-height: 100px;*/
	/*text-decoration: underline !important;*/
	color: #B6C1D1;
}


/*//////////////////// SECTION-FOOTER ////////////////////*/


.footer {
	height: 200px;
	background-color: white;
	text-align: center;
	font-size: 14px;
	/*background-color: orange;*/
	display: flex;
  	justify-content: center;


}


.footer a {
	text-decoration: none;
	text-align: center;	
	color: #61728E;

}

#footer-content {
	/*background-color: green;*/
	align-self: center;
	color: #61728E;



}

#hiring-link a:hover {
color: red;
}


#icon-heart {
color: red;
opacity: 0.6;
}



/*//////////////////// SECTION-CTA ////////////////////*/


#cta {

	height: 250px;
	/*width: 100%;*/
	text-align: center;
	background-color: white;
	display: flex;
  	justify-content: center;

}



#cta-button {
	margin: 0 auto;
	text-align: center;
	background-color: white;
	color: #000E30;
	line-height: 18px;
	border-style: solid;
	border-radius: 2px;
	border-width: 2px;
	padding-top: 22px;
	padding-bottom: 20px;
	padding-left: 30px;
	padding-right: 30px;
	/*margin-top: 20px;*/
	border-color: #000E30;
	text-decoration: none;
    /*font-family: 'SharpSans-light';*/
    font-size: 12px;
    	align-self: center;

}



#cta a:hover {
	color: white;
	border-color: #000E30;
	background-color: #000E30;

}







.footer a {
	text-decoration: none;
	text-align: center;	
	color: #61728E;

}










/*//////////////////// BOTTOM ////////////////////*/

.container {
	margin-bottom: 150px;
}



#bottom {

	position: fixed;
	left: 0px;
	right: 0px;
	z-index: -1;
	bottom: 0;
	height: 200px;
	margin: 0 auto;	
	text-align: center;  
	opacity: 0.1;  
}




#bottom img {
	height: 80px;
	margin: 0 auto;
	margin-top: 60px;
	bottom: 0;
	text-align: center;

}

